<resources>
    <string name="app_name">TourMania</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tour Mania</string>
    <string name="nav_header_subtitle"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_save_route">Save route</string>
    <string name="action_add_tour_image">Add tour image</string>
    <string name="action_edit_tags">Edit tags</string>
    <string name="action_edit_tour">Edit tour</string>
    <string name="action_share_location">Get location share QR code</string>
    <string name="action_add_to_favourites">Add to favourites</string>
    <string name="action_remove_from_favourites">Remove from favourites</string>
    <string name="action_rate_tour">Rate this tour</string>
    <string name="action_rate_tour_guide">Rate this tour guide</string>
    <string name="action_about_tour">About</string>
    <string name="action_set_active">Set as active</string>
    <string name="action_unset_active">Unset active</string>

    <string name="logged_in_as">Logged in as:\n%s</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_tours">My Tours</string>
    <string name="menu_tour_guides">Tour Guides</string>
    <string name="menu_join_tour">Join a Tour</string>
    <string name="menu_user_settings">User Settings</string>
    <string name="menu_fav_tours">Favourite Tours</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_sign_out">Sign Out</string>

    <string name="title_create_tour">Create Tour</string>
    <string name="create_tour_title_hint_text">Title</string>
    <string name="join_tour_code_hint_text">Tour code given by a tour guide</string>
    <string name="user_location_permission_explanation">This application needs location permission to automatically center map on your position.</string>
    <string name="user_location_permission_not_granted">Location permission was not granted.</string>
    <string name="tracking_enabled">Tracking enabled</string>
    <string name="tracking_already_enabled">Tracking already enabled</string>
    <string name="title_tour_waypoints_list">Tour Waypoints</string>
    <string name="title_tour_tags_list">Tour Tags</string>
    <string name="title_location_share_qr_code">Location Share QR Code</string>
    <string name="title_view_tour">View Tour</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_search">Search</string>

</resources>
