<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_my_tours"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_my_tours" />
        <item
            android:id="@+id/nav_fav_tours"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_fav_tours" />
        <item
            android:id="@+id/nav_tour_guides"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tour_guides" />
        <item
            android:id="@+id/nav_join_tour"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_join_tour" />
    </group>

    <item android:title="User account">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_sign_in"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_sign_in" />
            <item
                android:id="@+id/nav_sign_up"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/menu_sign_up" />
        </menu>
    </item>

</menu>
